--- a/web.config
+++ b/web.config
@@ -1,4 +1,7 @@
 <configuration>
+    <system.web>
+        <compilation batch="false" />
+    </system.web>
     <system.webServer>
         <handlers>
             <add name="iisnode" path="app.js" verb="*" modules="iisnode" />
